# gofo

./: .gitignore  Dockerfile  README.md  attendance_pipeline.py  build_exe.py  cli.py  config.py  home.html  index.html  login.html  main.py  permissions.json  pyproject.toml  region_FL.html  region_GL.html  region_Ground.html  region_MS.html  region_NE.html  region_TX.html  region_WE.html  report.html  requirements.txt  run.bat  run.command  run.py  考勤分析_FL 佛州大区.html  考勤分析_GL 大湖大区.html  考勤分析_Ground项目部.html  考勤分析_MS 中南大区.html  考勤分析_NE 东北大区.html  考勤分析_TX 德州大区.html  考勤分析_WE 美西大区.html  考勤分析报告.html
.github/workflows/: release.yml
gofo_attendance/: __init__.py  cli.py
gofo_attendance/pipeline/: __init__.py
gofo_attendance/pipeline/steps/: add_metrics.py  build_report_data.py  clean_data.py  pivot_analysis.py
pipeline/: __init__.py  utils.py
pipeline/steps/: __init__.py  add_metrics.py  build_report_data.py  build_trend_data.py  clean_base.py  clean_data.py  compute_comparison.py  inject_comparison.py  pivot_analysis.py  render_report.py  upload_trend_data.py
skills/attendance-pipeline/: SKILL.md
skills/attendance-pipeline/scripts/: render_report.py
static/: index.html
