[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gofo-attendance"
version = "1.0.0"
description = "考勤数据处理离线工具 — 一键清洗、指标计算、透视分析"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Mchester Zhang" }
]
keywords = ["attendance", "excel", "pandas", "考勤", "数据处理"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/chengzai456-arch/gofo"
Repository = "https://github.com/chengzai456-arch/gofo"

[project.scripts]
gofo = "gofo_attendance.cli:main"

[tool.setuptools.packages.find]
include = ["gofo_attendance*"]
